# LeapAI-Assist

./: LICENSE  README.md  pyproject.toml
deploy/podman/: Containerfile  compose.yaml
scripts/: build_podman.sh
src/os_integration/: __init__.py
src/ui/widgets/: chat_panel.py  onboarding_panel.py  status_bar.py  textual_tui.py
