[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LeapAI-Assistant"
version = "0.1.0"
description = "AI-native onboarding assistant for openSUSE Leap"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yasharth Panwar", email = "panwaryasharth203@gmail.com" },
]
dependencies = [
    "textual>=8.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "aiohttp>=3.11.0",
    "qdrant-client>=1.17.0",
    "crawl4ai>=0.8.5",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
suse-ai = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
